<resources>
    <string name="app_name">Quiz App</string>
    <string name="select_option">select option</string>
    <string name="QuestionNumber">Question Number</string>
    <string name="correct_option">correct option</string>
    <string name="Score">Score 0/8</string>
    <string name="question">Question</string>
    <string name="first_text">1/8 question</string>
    <string name="question1">Where did cricket originate?</string>
    <string name="question_1a">England</string>
    <string name="question_1b">India</string>
    <string name="question_1c">Australia</string>
    <string name="question_1d">West Indies</string>
    <string name="answer_1">England</string>
    <string name="question2">IPL stands for</string>
    <string name="question_2a">Indian Premier League</string>
    <string name="question_2b">Indo-Pakistan League</string>
    <string name="question_2c">International Premier League</string>
    <string name="question_2d">Indian Players League</string>
    <string name="answer_2">Indian Premier League</string>
    <string name="question3">Who was the first Indian Woman to get an Olympic medal?</string>
    <string name="question_3a">P.T. Usha</string>
    <string name="question_3b">Sania Mirza</string>
    <string name="question_3c">Karnam Malleswari</string>
    <string name="question_3d">Aarti Saha</string>
    <string name="answer_3">Karnam Malleswari</string>
    <string name="question4">The famous C.K. Naidu Trophy is associated with which sport?</string>
    <string name="question_4a">Badminton</string>
    <string name="question_4b">Hockey</string>
    <string name="question_4c">Lawn Tenis</string>
    <string name="question_4d">Cricket</string>
    <string name="answer_4">Cricket</string>
    <string name="question5"> ......., the worlds highest polo ground, is located in Pakistan.</string>
    <string name="question_5a">Kasur</string>
    <string name="question_5b">Attock</string>
    <string name="question_5c">Shandur</string>
    <string name="question_5d">Okara</string>
    <string name="answer_5">Shandur</string>
    <string name="question6">Who was the first Indian to receive the International Shooting Sport Federation (ISSF) Blue Cross?</string>
    <string name="question_6a">Ronjan Sodhi</string>
    <string name="question_6b">Vijay Kumar</string>
    <string name="question_6c">Abhinav Bindra</string>
    <string name="question_6d">Gagan Narang</string>
    <string name="answer_6">Abhinav Bindra</string>
    <string name="question7">Which athlete scored first position in the London Marathon held on 4th October, 2020?</string>
    <string name="question_7a">Eliud Kipchoge</string>
    <string name="question_7b">Shura Kitata</string>
    <string name="question_7c">Vincent Kipchumba</string>
    <string name="question_7d">Sisay Lemma</string>
    <string name="answer_7">Shura Kitata</string>
    <string name="question8">Puskas Award is associated with the game of -</string>
    <string name="question_8a">Football</string>
    <string name="question_8b">Cricket</string>
    <string name="question_8c">Tennis</string>
    <string name="question_8d">Badmitton</string>
    <string name="answer_8">Football</string>

</resources>