<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#272343">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/first_text"
        android:textAlignment="center"
        android:textColor="#ffa384"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectedOption"
            android:textSize="20sp"
            android:text="@string/select_option"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/correctAnswer"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/correct_option"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:id="@+id/question"
            android:text="@string/question"
            />
    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:layout_gravity="center"
         android:orientation="vertical"
         android:id="@+id/FirstTwoOption">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="25sp"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:id="@+id/option1"
             android:background="@drawable/optiondesign"
             android:text="@string/question_1a"
             android:paddingTop="10dp">
         </TextView>
           <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:textSize="25sp"
               android:background="@drawable/optiondesign"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:id="@+id/option2"
             android:text="@string/question_1b"
             android:paddingTop="10dp">
         </TextView>
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/RemainingTwoOption">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:id="@+id/option3"
            android:text="@string/question_1c"
            android:background="@drawable/optiondesign"
            android:paddingTop="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:id="@+id/option4"
            android:text="@string/question_1d"
            android:background="@drawable/optiondesign"
            android:paddingTop="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        >

        <TextView
            android:id="@+id/Score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/Score"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            >

        </TextView>

        <ProgressBar
            android:layout_gravity="end"
            android:id="@+id/progressBar"
            android:layout_marginTop="20dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>